--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,7 @@ body
 a
 {
     text-decoration: none;
+    color: black;
 }
 
 h1
@@ -13,9 +14,22 @@ h1
     text-align: center;
 }
 
+li
+{
+    list-style-type: none;
+    padding: 0px 35px 0px 0px;
+    margin-bottom: 10px;
+}
+
 #todasListas
 {
-    margin: 0px 0px 0px 150px;
+    margin: 0px 0px 0px 160px;
+}
+
+#lista1, #lista2, #lista3, #lista4
+{
+    font-size: 20px;
+    text-align: center;
 }
 
 #navegacao
@@ -26,4 +40,22 @@ h1
     background-color: blue;
     left: 0px;
     top: 0px;
+    border-right: 5px solid black;
+}
+
+img
+{
+    width: 45px;
+}
+
+.linkListas 
+{
+    width: 130px;
+    height: 100px;
+    padding: 10px;
+}
+
+.marginListas
+{
+    margin: 40px 0px;
 }
