--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,7 +26,7 @@ li
     margin: 0px 0px 0px 160px;
 }
 
-#lista1, #lista2, #lista3, #lista4
+.centro
 {
     font-size: 20px;
     text-align: center;
@@ -57,5 +57,5 @@ img
 
 .marginListas
 {
-    margin: 40px 0px;
+    margin: 35px 0px;
 }
